# SynApps-v0.4.0

./: .coverage  .dockerignore  .env.development  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANNOUNCEMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  RELEASE_NOTES.md  SPEC.md  UAT-GUIDE.md  build-checklist.json  docker-compose.yml  file::memory:  file::memory:-journal  fly.toml  forge-test-failures-action-taken-by-claude-to-fix.md  forge-testing-failures.md  inspect_metadata.py  mcp.json  synapps.db  synapps_memory.db  synapps_memory.db-shm  synapps_memory.db-wal
.asif/: NEXUS-archive.md  NEXUS.md
.forge/: .gitignore  events.jsonl  governance.json  plan.md  state.json  uat-report.md  uat-status.json
.scripts/: create-release.sh
ai-docs/: dev-action-items.md  dev-context-primer.md  workflow-editor-enhancements.md
docs/: API.md  T-045-frontend-stack-migration-plan.md  T-050-universal-llm-node-design.md  applet-interface-spec.md  applets.md  architecture-diagram.puml  architecture.md  competitive-analysis-2026.md  completion-summary.md  developer-docs.md  execution-engine.md  final-implementation-report.md  final-report.md  implementation-report.md  migration-plan-v1.md  openapi.json  request-flow.md  stack-upgrade.md  user-guide.md
migrations/: env.py
scripts/: kill-dev.sh
synapps/: __init__.py
synapps-sdk/: pyproject.toml
synapps-sdk/synapps_sdk/: __init__.py  _base.py  async_client.py  client.py  exceptions.py
templates/: api_fetch_template.yaml  content_engine.yaml
tests/: test_llm_providers.py
(+576 files in other folders)
